[gd_scene load_steps=2 format=3 uid="uid://0qp5a17gnjkh"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_be4r4"]

[node name="Pause_Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_be4r4")

[node name="Background_Blur" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.411765)

[node name="MenuContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 0

[node name="PauseVBox" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="Paused_Label" type="Label" parent="MenuContainer/PauseVBox"]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.454902, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 72
text = "PAUSED"
horizontal_alignment = 1

[node name="ButtonHBox" type="HBoxContainer" parent="MenuContainer/PauseVBox"]
layout_mode = 2
alignment = 1

[node name="Continue" type="Button" parent="MenuContainer/PauseVBox/ButtonHBox"]
layout_mode = 2
text = "Continue"

[node name="Save Game" type="Button" parent="MenuContainer/PauseVBox/ButtonHBox"]
layout_mode = 2
text = "Save Game"

[node name="Load Game" type="Button" parent="MenuContainer/PauseVBox/ButtonHBox"]
layout_mode = 2
text = "Load Game"

[node name="Start" type="Button" parent="MenuContainer/PauseVBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit To Menu"

[node name="Exit" type="Button" parent="MenuContainer/PauseVBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Exit Game"

[connection signal="pressed" from="MenuContainer/PauseVBox/ButtonHBox/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MenuContainer/PauseVBox/ButtonHBox/Save Game" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="MenuContainer/PauseVBox/ButtonHBox/Load Game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MenuContainer/PauseVBox/ButtonHBox/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuContainer/PauseVBox/ButtonHBox/Exit" to="." method="_on_exit_pressed"]
